Fixed spacing issue on company title

--- a/styles.css
+++ b/styles.css
@@ -34,10 +34,10 @@ h1 { margin: 0; }
 h1, h2 { font-size: 1.2rem; }
 
 h3 {
+	margin: auto;
 	font-size: 1.08rem;
 	font-weight: normal;
 	display: inline-block;
-	margin: auto auto auto 6px;
 }
 
 h4 {
@@ -138,7 +138,6 @@ details {
 
 .company {
 	display: flex;
-	margin-right: 4px;
 	align-items: center;
 	& a {
 		& img {
@@ -148,6 +147,7 @@ details {
 			vertical-align: middle;
 		}
 	}
+	& h3 { margin-left: 6px; }
 }
 
 .v-list {
@@ -536,6 +536,11 @@ details {
 	::details-content {
 		height: auto !important;
 		content-visibility: visible;
+	}
+	.company {
+		& h3 {
+			margin-left: 0px;
+		}
 	}
 	.print {
 		display: block;
